add upgrade flow for user
